LPotC\AUDIO\TRACKS.CFG - more comments

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -157,6 +157,10 @@ Bank "PearlvInter_B"
 Track Class "Action" Filename "Action1" Volume 0.18 Downmix StereoOnly Cue 00.00 Cue 42.12 Cue 64.47 Cue 88.59
 Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.80
 
+; PearlvInter_C - (USING PearlvInter_B)
+
+; PearlvInter_D - (USING PearlvInter_A)
+
 
 ;;; 1-4JacksIsland ("Black Sam's Spit")
 
@@ -494,7 +498,7 @@ Path "Audio\Tracks\Cutscenes\"
 
 ;;; Titles
 
-Bank "TitlesStart"
+Bank "TitlesStart" ; Doesn't play when coming from 1-MainIntro, as that has unique 
 Track Class "Cutscene" Filename "TitlesStart" Volume 0.50 leaveusermusic
 
 
@@ -606,7 +610,7 @@ Track Class "Cutscene" Filename "2-PostCredits" Volume 0.7
 Bank "2-1Pelegosto_Intro"
 Track Class "Cutscene" Filename "2-1Pelegosto_Intro" Volume 0.7
 
-Bank "2-1Pelegosto_Midtro"
+Bank "2-1Pelegosto_Midtro" ; Bridge breaks; fall into jungle
 Track Class "Cutscene" Filename "2-1Pelegosto_Midtro" Volume 0.7
 
 Bank "2-1Pelegosto_Outro"
@@ -660,7 +664,7 @@ Track Class "Cutscene" Filename "2-4IslaCruces_Outro" Volume 0.7
 Bank "2-5Kraken_Intro"
 Track Class "Cutscene" Filename "2-5Kraken_Intro" Volume 0.8
 
-Bank "2-5Kraken_Midtro1"
+Bank "2-5Kraken_Midtro1" ; 
 Track Class "Cutscene" Filename "2-5Kraken_Midtro1" Volume 0.9
 
 Bank "2-5Kraken_Outro"
@@ -685,7 +689,7 @@ Track Class "Cutscene" Filename "3-PostCredits" Volume 0.5
 Bank "3-1Singapore_Intro"
 Track Class "Cutscene" Filename "3-1Singapore_Intro" Volume 0.6
 
-Bank "3-1Singapore_Midtro1"
+Bank "3-1Singapore_Midtro1" ; Meet Sao Feng
 Track Class "Cutscene" Filename "3-1Singapore_Midtro1" Volume 0.7
 
 Bank "3-1Singapore_Outro"
@@ -697,7 +701,7 @@ Track Class "Cutscene" Filename "3-1Singapore_Outro" Volume 0.8
 Bank "3-2Locker_Intro"
 Track Class "Cutscene" Filename "3-2Locker_Intro" Volume 0.7
 
-Bank "3-2Locker_Midtro1"
+Bank "3-2Locker_Midtro1" ; Back to sea, crew joins, map conundrum
 Track Class "Cutscene" Filename "3-2Locker_Midtro1" Volume 0.7
 
 Bank "3-2Locker_Outro"
@@ -724,7 +728,7 @@ Track Class "Cutscene" Filename "3-3DutchmanEscape_Outro" Volume 0.8
 Bank "3-4ShipwreckCove_Intro"
 Track Class "Cutscene" Filename "3-4ShipwreckCove_Intro" Volume 0.6
 
-Bank "3-4ShipwreckCove_Midtro1"
+Bank "3-4ShipwreckCove_Midtro1" ; Brethren Court quarrels
 Track Class "Cutscene" Filename "3-4ShipwreckCove_Midtro1" Volume 0.5
 
 Bank "3-4ShipwreckCove_Outro"
@@ -736,10 +740,10 @@ Track Class "Cutscene" Filename "3-4ShipwreckCove_Outro" Volume 0.6
 Bank "3-5Maelstrom_Intro"
 Track Class "Cutscene" Filename "3-5Maelstrom_Intro" Volume 0.6
 
-Bank "3-5Maelstrom_Midtro1"
+Bank "3-5Maelstrom_Midtro1" ; "What Shall We Die For"
 Track Class "Cutscene" Filename "3-5Maelstrom_Midtro1" Volume 0.7
 
-Bank "3-5Maelstrom_Midtro2"
+Bank "3-5Maelstrom_Midtro2" ; Davy Jones boss intro
 Track Class "Cutscene" Filename "3-5Maelstrom_Midtro2" Volume 0.5
 
 Bank "3-5Maelstrom_Outro"
@@ -764,13 +768,13 @@ Track Class "Cutscene" Filename "4-PostCredits" Volume 0.5
 Bank "4-1London_Intro"
 Track Class "Cutscene" Filename "4-1London_Intro" Volume 0.7
 
-Bank "4-1London_Midtro1"
+Bank "4-1London_Midtro1" ; Out the window
 Track Class "Cutscene" Filename "4-1London_Midtro1" Volume 0.7
 
-Bank "4-1London_Midtro2"
+Bank "4-1London_Midtro2" ; Carriage chase start
 Track Class "Cutscene" Filename "4-1London_Midtro2" Volume 0.7
 
-Bank "4-1London_Midtro3"
+Bank "4-1London_Midtro3" ; Carriage chase end - enter tavern
 Track Class "Cutscene" Filename "4-1London_Midtro3" Volume 0.5
 
 Bank "4-1London_Outro"
@@ -782,7 +786,7 @@ Track Class "Cutscene" Filename "4-1London_Outro" Volume 0.5
 Bank "4-2QueenAnne_Intro"
 Track Class "Cutscene" Filename "4-2QueenAnne_Intro" Volume 0.6
 
-Bank "4-2QueenAnne_Midtro1"
+Bank "4-2QueenAnne_Midtro1" ; Blackbeard appears
 Track Class "Cutscene" Filename "4-2QueenAnne_Midtro1" Volume 0.8
 
 Bank "4-2QueenAnne_Outro"
@@ -794,7 +798,7 @@ Track Class "Cutscene" Filename "4-2QueenAnne_Outro" Volume 0.5
 Bank "4-3WhiteCap_Intro"
 Track Class "Cutscene" Filename "4-3WhiteCap_Intro" Volume 0.5
 
-Bank "4-3WhiteCap_Midtro"
+Bank "4-3WhiteCap_Midtro" ; Mermaids arrive
 Track Class "Cutscene" Filename "4-3WhiteCap_Midtro" Volume 0.5
 
 Bank "4-3WhiteCap_Outro"
@@ -806,10 +810,10 @@ Track Class "Cutscene" Filename "4-3WhiteCap_Outro" Volume 0.6
 Bank "4-4PonceDeLeon_Intro"
 Track Class "Cutscene" Filename "4-4PonceDeLeon_Intro" Volume 0.6
 
-Bank "4-4PonceDeLeon_Midtro1"
+Bank "4-4PonceDeLeon_Midtro1" ; Approaching Spanish camp 
 Track Class "Cutscene" Filename "4-4PonceDeLeon_Midtro1" Volume 0.7
 
-Bank "4-4PonceDeLeon_Midtro2"
+Bank "4-4PonceDeLeon_Midtro2" ; Spaniard Boss intro
 Track Class "Cutscene" Filename "4-4PonceDeLeon_Midtro2" Volume 0.5
 
 Bank "4-4PonceDeLeon_Outro"
@@ -821,17 +825,17 @@ Track Class "Cutscene" Filename "4-4PonceDeLeon_Outro" Volume 0.6
 Bank "4-5Fountain_Intro"
 Track Class "Cutscene" Filename "4-5Fountain_Intro" Volume 0.6
 
-Bank "4-5Fountain_Midtro1"
+Bank "4-5Fountain_Midtro1" ; Fountain found; battle starts
 Track Class "Cutscene" Filename "4-5Fountain_Midtro1" Volume 0.5
 
-Bank "4-5Fountain_Midtro2"
+Bank "4-5Fountain_Midtro2" ; Blackbeard boss intro
 Track Class "Cutscene" Filename "4-5Fountain_Midtro2" Volume 0.5
 
-Bank "4-5Fountain_Midtro3"
+Bank "4-5Fountain_Midtro3" ; Syrena joins
 Track Class "Cutscene" Filename "4-5Fountain_Midtro3" Volume 0.7
 
 Bank "4-5Fountain_Outro"
 Track Class "Cutscene" Filename "4-5Fountain_Outro" Volume 0.6
 
 
-; That's the end of the tracks; remember that dead men tell no tales....
+; That's everything; let it be known that dead men tell no tales....
