LPotC\AUDIO\TRACKS.CFG

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -91,7 +91,7 @@ Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.18
 
 ;;; Special dance music
 
-Bank "PirateDisco" 
+Bank "PirateDisco" ; ShipwreckCove_A disco puzzle (does it play elsewhere?)
 Track Class "Quiet" Filename "PirateDisco" Volume 0.50 Downmix StereoOnly Cue 00.00
 
 Bank "GroovyJack" ; Dancing Jack Sparrow
@@ -251,7 +251,7 @@ Bank "DutchManKey_C" ; Seaking up on Jones, and maybe the freeplay room undernea
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00 Cue 69.00 Cue 141.00 Cue 180.00
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.30
 
-Bank "MusicBox" ; plays during steppinf on disco tiles in_C ; wrong step triggers Action
+Bank "MusicBox" ; plays during stepping on disco tiles in_C ; wrong step triggers Action
 Track Class "Quiet" Filename "TiaDalma_Qui" Volume 0.55 Downmix StereoOnly Cue 00.00
 Track Class "Action" Filename "DutchManKey_Organ" Volume 0.35 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.30
@@ -466,11 +466,11 @@ Track Class "Ambience" Filename "SpookyJungle_amb" Volume 0.12
 
 ;;; 4-5Fountain ("The Fountain of Youth")
 
-Bank "Fountain_A" ; Jungle
+Bank "Fountain_A" ; Mermaid Pools (Free Play only) - accessed from _C
 Track Class "Action" Filename "Upriver_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "Jungle_Thick_amb" Volume 0.24
 
-Bank "Fountain_B" ; Mermaid Pools (Free Play only) - accessed from _C
+Bank "Fountain_B" ; Jungle (starting level)
 Track Class "Action" Filename "Upriver_Qui" Volume 0.26 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "Jungle_Thick_amb" Volume 0.30
 
@@ -498,7 +498,8 @@ Path "Audio\Tracks\Cutscenes\"
 
 ;;; Titles
 
-Bank "TitlesStart" ; Doesn't play when coming from 1-MainIntro, as that has unique 
+; Doesn't play when coming from 1-MainIntro, as that has this plus unique intro music
+Bank "TitlesStart" 
 Track Class "Cutscene" Filename "TitlesStart" Volume 0.50 leaveusermusic
 
 
@@ -528,10 +529,10 @@ Track Class "Cutscene" Filename "1-PostCredits" Volume 0.7
 Bank "1-1PortRoyal_Intro"
 Track Class "Cutscene" Filename "1-1PortRoyal_Intro" Volume 0.7
 
-Bank "1-1PortRoyal_Midtro1"
+Bank "1-1PortRoyal_Midtro1" ; Find Jack (boss intro)
 Track Class "Cutscene" Filename "1-1PortRoyal_Midtro1" Volume 0.7
 
-Bank "1-1PortRoyal_Midtro2"
+Bank "1-1PortRoyal_Midtro2" ; Jack jailed, pirates attack, Will visits Jack
 Track Class "Cutscene" Filename "1-1PortRoyal_Midtro2" Volume 0.7
 
 Bank "1-1PortRoyal_Outro"
@@ -664,7 +665,7 @@ Track Class "Cutscene" Filename "2-4IslaCruces_Outro" Volume 0.7
 Bank "2-5Kraken_Intro"
 Track Class "Cutscene" Filename "2-5Kraken_Intro" Volume 0.8
 
-Bank "2-5Kraken_Midtro1" ; 
+Bank "2-5Kraken_Midtro1" ; Jack (and Elizabeth) left behind to face the Kraken
 Track Class "Cutscene" Filename "2-5Kraken_Midtro1" Volume 0.9
 
 Bank "2-5Kraken_Outro"
