LPotC Tracks.cfg - update comments

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -164,7 +164,7 @@ Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.80
 
 ;;; 1-4JacksIsland ("Black Sam's Spit")
 
-Bank "JacksIsland_A" ; Day one - above ground
+Bank "JacksIsland_A" ; Above ground - daytime
 Track Class "Quiet" Filename "JacksIsland_A_Qui" Volume 0.18 Downmix StereoOnly Cue 00.00
 Track Class "Action" Filename "Danger_Creature" Volume 0.43 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SeaShore_Light_Amb" Volume 0.35
@@ -173,7 +173,7 @@ Bank "JacksIsland_B" ; Rum locker
 Track Class "Quiet" Filename "JacksIsland_B_Qui" Volume 0.23 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.20
 
-Bank "JacksIsland_C" ; Day two - "Why is the rum gone?!"
+Bank "JacksIsland_C" ; Above ground - nighttime
 Track Class "Quiet" Filename "WindMed_amb" Volume 0.23 Downmix StereoOnly Cue 00.00 ; that's not a music track, Tt...
 Track Class "Ambience" Filename "SeaShore_Light_amb" Volume 0.50
 
@@ -345,15 +345,15 @@ Bank "DutchManEscape_B" ; Below decks
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00 Cue 69.00 Cue 141.00 Cue 180.00
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.35
 
-Bank "DutchManEscape_B_Act"
+Bank "DutchManEscape_B_Act" ; Below decks, after freeing prisoners - DOES NOT WORK IN FREE PLAY
 Track Class "Action" Filename "DutchManEscape_Act" Volume 0.28 Downmix StereoOnly Cue 04.24 Cue 50.50 Cue 90.00 Cue 133.00
 Track Class "Ambience" Filename "DutchManInt_amb" Volume 0.35
 
-Bank "DutchManEscape_C" ; On sides of ship, including front and back
+Bank "DutchManEscape_C" ; On sides of ship, including front and back, as well as Chinese ship
 Track Class "Action" Filename "DutchManEscape_Act" Volume 0.28 Downmix StereoOnly Cue 04.24 Cue 50.50 Cue 90.00 Cue 133.00
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.65
 
-Bank "DutchManEscape_D"
+Bank "DutchManEscape_D" ; inside Chinese ship
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00 Cue 69.00 Cue 141.00 Cue 180.00
 Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.35
 
@@ -376,7 +376,7 @@ Bank "Maelstrom_A" ; Calpyso transforms
 Track Class "Action" Filename "MidAction1" Volume 0.18 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.65
 
-Bank "Maelstrom_B" ; Black Pearl - Wedding
+Bank "Maelstrom_B" ; Black Pearl - "Wedding"
 Track Class "Action" Filename "Maelstrom_Act" Volume 0.24 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "Maelstrom_amb" Volume 0.21
 
