--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -123,16 +123,16 @@ Track Class "Ambience" Filename "WindLight_amb" Volume 0.45
 
 ;;; 1-2Tortuga ("Tortuga")
 
-Bank "Tortuga_A" ; Port
+Bank "Tortuga_A" ; Town
 Track Class "Quiet" Filename "Tortuga_Qui" Volume 0.17 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "TortugaExt_amb" Volume 0.50
 
-Bank "Tortuga_B"
+Bank "Tortuga_B"; Tavern
 Track Class "Quiet" Filename "TwoHornPipes" Volume 0.22 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Action1_Heroic" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "TortugaInt_amb" Volume 0.40
 
-Bank "Tortuga_B_Upstairs"
+Bank "Tortuga_B_Upstairs" ; and basement
 Track Class "Quiet" Filename "TwoHornPipesMuff" Volume 0.35 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Action1_Heroic" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "TortugaIntMuff_amb" Volume 0.60
@@ -141,7 +141,7 @@ Bank "Tortuga_B_WhoreHouse" ; Wench house, to be more polite
 Track Class "Quiet" Filename "TwoHornPipes" Volume 0.22 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Ambience" Filename "TortugaIntMuff_amb" Volume 0.50
 
-Bank "Tortuga_C"
+Bank "Tortuga_C" ; Port
 Track Class "Quiet" Filename "Tortuga_Qui" Volume 0.17 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Danger_Creature" Volume 0.43 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "WindLight_amb" Volume 0.40
@@ -180,21 +180,21 @@ Track Class "Ambience" Filename "SeaShore_Light_amb" Volume 0.50
 
 ;;; 1-5IslaDeMuerta ("Isla De Muerta")
 
-Bank "IslaDeMuerta_A"
+Bank "IslaDeMuerta_A" ; Cavern entrance
 Track Class "Quiet" Filename "IslaDeMuerta_Qui" Volume 0.32 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Action1_Evil" Volume 0.34 Downmix StereoOnly Cue 00.00 ;Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.35
 
-Bank "IslaDeMuerta_B"
+Bank "IslaDeMuerta_B" ; Barbossa boss fight, first stage
 Track Class "Action" Filename "Action1_Heroic" Volume 0.22 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.35
 
-Bank "IslaDeMuerta_C"
+Bank "IslaDeMuerta_C" ; Outside, accessed from _B (free play only)
 Track Class "Quiet" Filename "IslaDeMuerta_Qui" Volume 0.32 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Danger_Creature" Volume 0.43 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SeaShore_Med_amb" Volume 0.35
 
-Bank "IslaDeMuerta_D"
+Bank "IslaDeMuerta_D" ; Barbossa boss fight, second stage
 Track Class "Action" Filename "Action2_Heroic" Volume 0.20 Downmix StereoOnly Cue 00.00 Cue 25.47 Cue 39.10 Cue 55.05 Cue 78.94
 Track Class "Ambience" Filename "WetCave_amb" Volume 0.35
 
@@ -203,15 +203,15 @@ Track Class "Ambience" Filename "WetCave_amb" Volume 0.35
 
 ;;; 2-1Pelegosto ("Pelegosto")
 
-Bank "Pelegosto_A"
+Bank "Pelegosto_A" ; Rolling bone cages
 Track Class "Action" Filename "Pelegosto_act" Volume 0.30 Downmix StereoOnly Cue 120.50
 Track Class "Ambience" Filename "TribalMountain_amb" Volume 0.42
 
-Bank "Pelegosto_B"
+Bank "Pelegosto_B" ; Cannibal village
 Track Class "Action" Filename "Maelstrom_Act" Volume 0.18 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "TribalMountain_amb" Volume 0.40
 
-Bank "Pelegosto_C"
+Bank "Pelegosto_C" ; Jungle and beach
 Track Class "Action" Filename "Pelegosto_act" Volume 0.28 Downmix StereoOnly Cue 120.50
 Track Class "Ambience" Filename "SpookyJungle_amb" Volume 0.06
 
@@ -353,7 +353,7 @@ Bank "DutchManEscape_C" ; On sides of ship, including front and back, as well as
 Track Class "Action" Filename "DutchManEscape_Act" Volume 0.28 Downmix StereoOnly Cue 04.24 Cue 50.50 Cue 90.00 Cue 133.00
 Track Class "Ambience" Filename "DutchManExt_amb" Volume 0.65
 
-Bank "DutchManEscape_D" ; inside Chinese ship
+Bank "DutchManEscape_D" ; Inside Chinese ship
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.38 Downmix StereoOnly Cue 00.00 Cue 69.00 Cue 141.00 Cue 180.00
 Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.35
 
@@ -404,7 +404,7 @@ Bank "London_C" ; Carriage Chase
 Track Class "Action" Filename "Action1_Heroic" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "London_C_amb" Volume 0.40
 
-Bank "London_D" ; Vs. Angelica Jack (tavern)
+Bank "London_D" ; Tavern and Vs. Angelica Jack
 Track Class "Action" Filename "StatusScreen2" Volume 0.28 Downmix StereoOnly Cue 00.00 ;Cue 00.00 Cue 00.00 Cue 00.00
 Track Class "Ambience" Filename "TortugaInt_amb" Volume 0.40
 
@@ -429,7 +429,7 @@ Bank "QueenAnn_C" ; Blackbeard's Cabin (Free Play only)
 Track Class "Quiet" Filename "ShipwreckCove_Qui" Volume 0.38 Downmix StereoOnly Cue 01.44
 Track Class "Ambience" Filename "ShipIntCalm_amb" Volume 0.65
 
-Bank "Angelica_MusicBox" ; puzzle-induced - accessed in _C
+Bank "Angelica_MusicBox" ; puzzle-induced - accessed in _C; might not actually work
 Track Class "Quiet" Filename "TwoHornPipes" Volume 0.22 Downmix StereoOnly Cue 01.44
 Track Class "Ambience" Filename "ShipIntCalm_amb" Volume 0.65
 
