LPotC Tracks.cfg - more descriptions

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -132,7 +132,7 @@ Track Class "Quiet" Filename "TwoHornPipes" Volume 0.22 Downmix StereoOnly Cue 0
 Track Class "Action" Filename "Action1_Heroic" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "TortugaInt_amb" Volume 0.40
 
-Bank "Tortuga_B_Upstairs" ; and basement
+Bank "Tortuga_B_Upstairs" ; also used by cellar
 Track Class "Quiet" Filename "TwoHornPipesMuff" Volume 0.35 Downmix StereoOnly Cue 00.00 ;Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Action1_Heroic" Volume 0.26 Downmix StereoOnly Cue 00.00 Cue 33.20 Cue 53.96 Cue 74.60 Cue 90.00
 Track Class "Ambience" Filename "TortugaIntMuff_amb" Volume 0.60
@@ -149,20 +149,20 @@ Track Class "Ambience" Filename "WindLight_amb" Volume 0.40
 
 ;;; 1-3PearlvInter ("The Black Pearl Attacks")
 
-Bank "PearlvInter_A"
+Bank "PearlvInter_A" ; Interceptor, on Deck
 Track Class "Action" Filename "Action2_Heroic" Volume 0.21 Downmix StereoOnly Cue 00.00 Cue 30 Cue 45 Cue 50
 Track Class "Ambience" Filename "PirateBattle_amb" Volume 0.80 Cue 00.00 Cue 20
 
-Bank "PearlvInter_B"
+Bank "PearlvInter_B" ; Interceptor, below decks
 Track Class "Action" Filename "Action1" Volume 0.18 Downmix StereoOnly Cue 00.00 Cue 42.12 Cue 64.47 Cue 88.59
 Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.80
 
-; PearlvInter_C - (USING PearlvInter_B)
+; PearlvInter_C - ; Sinking Interceptor (USING PearlvInter_B)
 
-; PearlvInter_D - (USING PearlvInter_A)
+; PearlvInter_D - ; Black Pearl (USING PearlvInter_A)
 
 
-;;; 1-4JacksIsland ("Black Sam's Spit")
+;;; 1-4JacksIsland ("Smuggler's Den")
 
 Bank "JacksIsland_A" ; Above ground - daytime
 Track Class "Quiet" Filename "JacksIsland_A_Qui" Volume 0.18 Downmix StereoOnly Cue 00.00
@@ -232,7 +232,7 @@ Track Class "Quiet" Filename "Upriver_Qui" Volume 0.43 Downmix StereoOnly Cue 00
 Track Class "Action" Filename "Upriver_Act" Volume 0.24 Downmix StereoOnly Cue 39.00 Cue 10.00
 Track Class "Ambience" Filename "SpookyJungle_amb" Volume 0.12
 
-Bank "Upriver_C" ; Tia Dalma's hut
+Bank "Upriver_C" ; Tia Dalma's hut (also used by Hub_D)
 Track Class "Quiet" Filename "Upriver_Qui" Volume 0.43 Downmix StereoOnly Cue 70.00
 Track Class "Ambience" Filename "CreakyHut_amb" Volume 0.60
 
@@ -360,12 +360,12 @@ Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.35
 
 ;;; 3-4ShipwreckCove ("The Brethren Court")
 
-Bank "ShipwreckCove_A"
+Bank "ShipwreckCove_A" ; Gather the court
 Track Class "Quiet" Filename "ShipwreckCove_Qui" Volume 0.40 Downmix StereoOnly Cue 01.44
 Track Class "Action" Filename "Danger_Creature" Volume 0.43 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "PirateBay_amb" Volume 0.63 Cue 0.00 Cue 30.00
 
-Bank "ShipwreckCove_B"
+Bank "ShipwreckCove_B" ; Court recess
 Track Class "Quiet" Filename "IslaDeMuerta_Qui" Volume 0.32 Downmix StereoOnly Cue 0.00
 Track Class "Ambience" Filename "PirateBay_amb" Volume 0.40 Cue 0.00 Cue 30.00
 
@@ -544,7 +544,7 @@ Track Class "Cutscene" Filename "1-1PortRoyal_Outro" Volume 0.7
 Bank "1-2Tortuga_Intro"
 Track Class "Cutscene" Filename "1-2Tortuga_Intro" Volume 0.7
 
-Bank "1-2Tortuga_Midtro"
+Bank "1-2Tortuga_Midtro" ; Meet Gibbs
 Track Class "Cutscene" Filename "1-2Tortuga_Midtro" Volume 0.8
 
 Bank "1-2Tortuga_Outro"
@@ -566,7 +566,7 @@ Bank "1-3PearlvInter_Outro"
 Track Class "Cutscene" Filename "1-3PearlvInter_Outro" Volume 0.7
 
 
-;;; 1-4JacksIsland ("Black Sam's Spit")
+;;; 1-4JacksIsland ("Smuggler's Den")
 
 Bank "1-4JacksIsland_Intro"
 Track Class "Cutscene" Filename "1-4JacksIsland_Intro" Volume 0.6
