LPotC Tracks.cfg - clarify hub maps

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -69,9 +69,19 @@ Track Class "Quiet" Filename "StatusScreen4" Volume 0.22 Downmix StereoOnly Cue 
 
 ;;; Hub
 
-Bank "Hub_A" ; outside and taverns, including nighttime ("FreePlay" rooms) - also used by _B and _C
+Bank "Hub_A" ; Docks, daytime - also used by _B and _C
 Track Class "Quiet" Filename "JacksIsland_A_Qui" Volume 0.18 Downmix StereoOnly Cue 00.00
 Track Class "Ambience" Filename "SeaShore_Light_Amb" Volume 0.35
+
+; Hub_A_FreePlay - Docks, nighttime (USING Hub_A)
+
+; Hub_B - Town, daytime (USING Hub_A)
+
+; Hub_B_FreePlay - Town and taverns, nighttime (USING Hub_A)
+
+; Hub_C - White Cap Bay, daytime (USING Hub_A)
+
+; Hub_C_FreePlay - White Cap Bay, nighttime (USING Hub_A)
 
 ; Hub_D - Tia Dalma's shack (USING Upriver_C)
 
