LPotC/Audio/Tracks.cfg - downmix notes

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -15,9 +15,8 @@
 ; in this case there is a `downmix` flag that can be applied per track for downmixing 
 ; to 2-channel stereo. It supports the following values:
 ; * `StereoOnly` - only use the front-left and front-right channels of the input file
-; * `NoRear` - use the front-left, front-right, and center channels of the input file
-
-; TODO: Test whether the LFE channel is used in the default and `NoRear` downmix modes.
+; * `NoRear` - use the front-left, front-right, center, and LFE channels of the input file
+; Note - Surround and LFE channels are attenuated when downmixed to stereo!
 
 ; ===============================================
 ; ================ Global Settings ==============
