LPotC TRACKS.CFG - Update some location notes

--- a/LPotC/AUDIO/TRACKS.CFG
+++ b/LPotC/AUDIO/TRACKS.CFG
@@ -111,7 +111,7 @@ Track Class "Quiet" Filename "TheRideMusic" Volume 0.45 Downmix StereoOnly Cue 0
 
 ;;; 1-1PortRoyal ("Port Royal")
 
-Bank "PortRoyalA" ; Mr. Brown's smithy
+Bank "PortRoyalA" ; Mr. Brown's smithy, also sausage bonus room accessed from _C
 Track Class "Quiet" Filename "Quiet1" Volume 0.27 Downmix StereoOnly Cue 00.00 Cue 23.38 Cue 45.40 Cue 61.41 Cue 96.17
 Track Class "Action" Filename "Action1" Volume 0.17 Downmix StereoOnly Cue 00.00 Cue 42.12 Cue 64.47 Cue 88.59
 Track Class "Ambience" Filename "StoneRoom_amb" Volume 0.70
@@ -158,7 +158,7 @@ Track Class "Ambience" Filename "WindLight_amb" Volume 0.40
 
 ;;; 1-3PearlvInter ("The Black Pearl Attacks")
 
-Bank "PearlvInter_A" ; Interceptor, on Deck
+Bank "PearlvInter_A" ; Interceptor, on deck
 Track Class "Action" Filename "Action2_Heroic" Volume 0.21 Downmix StereoOnly Cue 00.00 Cue 30 Cue 45 Cue 50
 Track Class "Ambience" Filename "PirateBattle_amb" Volume 0.80 Cue 00.00 Cue 20
 
@@ -166,9 +166,9 @@ Bank "PearlvInter_B" ; Interceptor, below decks
 Track Class "Action" Filename "Action1" Volume 0.18 Downmix StereoOnly Cue 00.00 Cue 42.12 Cue 64.47 Cue 88.59
 Track Class "Ambience" Filename "ShipIntCalm_Amb" Volume 0.80
 
-; PearlvInter_C - ; Sinking Interceptor (USING PearlvInter_B)
+; PearlvInter_C - ; Black Pearl, below decks (USING PearlvInter_B)
 
-; PearlvInter_D - ; Black Pearl (USING PearlvInter_A)
+; PearlvInter_D - ; Black Pearl, on deck (USING PearlvInter_A)
 
 
 ;;; 1-4JacksIsland ("Smuggler's Den")
